Add Construct to search, reorganize buttons

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -142,40 +142,39 @@
                         <input type="checkbox" name="ABERRATION" id="aberration-type" class="monTypeSearch">
                         <label for="beast-type" class="checkbox">Beast</label>
                         <input type="checkbox" name="Beast" id="beast-type" class="monTypeSearch">
-                        <label for="dragon-type" class="checkbox">Dragon</label>
-                        <input type="checkbox" name="Dragon" id="dragon-type" class="monTypeSearch">
+                        <label for="construct-type" class="checkbox">Construct</label>
+                        <input type="checkbox" name="Construct" id="construct-type" class="monTypeSearch">
 
                         <br/>
-
+                        <label for="dragon-type" class="checkbox">Dragon</label>
+                        <input type="checkbox" name="Dragon" id="dragon-type" class="monTypeSearch">
                         <label for="elemental-type" class="checkbox">Elemental</label>
                         <input type="checkbox" name="Elemental" id="elemental-type" class="monTypeSearch">
                         <label for="fey-type" class="checkbox">Fey</label>
                         <input type="checkbox" name="Fey" id="fey-type" class="monTypeSearch">
+
+                        <br/>
                         <label for="fiend-type" class="checkbox">Fiend</label>
                         <input type="checkbox" name="Fiend" id="fiend-type" class="monTypeSearch">
-
-                        <br/>
-
                         <label for="giant-type" class="checkbox">Giant</label>
                         <input type="checkbox" name="Giant" id="giant-type" class="monTypeSearch">
-                        <label for="Monstrosity-type" class="checkbox">Monstrosity</label>
-                        <input type="checkbox" name="Monstrosity" id="Monstrosity-type" class="monTypeSearch">
-                        <label for="npc-type" class="checkbox">NPC</label>
-                        <input type="checkbox" name="NPC" id="npc-type" class="monTypeSearch">
+                        <label for="humanoid-type" class="checkbox">Humanoid</label>
+                        <input type="checkbox" name="Humanoid" id="humanoid-type" class="monTypeSearch">
 
                         <br/>
-
+                        <label for="monstrosity-type" class="checkbox">Monstrosity</label>
+                        <input type="checkbox" name="Monstrosity" id="monstrosity-type" class="monTypeSearch">
+                        <label for="npc-type" class="checkbox">NPC</label>
+                        <input type="checkbox" name="NPC" id="npc-type" class="monTypeSearch">
                         <label for="ooze-type" class="checkbox">Ooze</label>
                         <input type="checkbox" name="Ooze" id="ooze-type" class="monTypeSearch">
+
+                        <br/>
                         <label for="swarm-type" class="checkbox">Swarm</label>
                         <input type="checkbox" name="Swarm" id="swarm-type" class="monTypeSearch">
                         <label for="undead-type" class="checkbox">Undead</label>
                         <input type="checkbox" name="Undead" id="undead-type" class="monTypeSearch">
 
-                        <br/>
-
-                        <label for="humanoid-type" class="checkbox">Humanoid</label>
-                        <input type="checkbox" name="Humanoid" id="humanoid-type" class="monTypeSearch">
                     </div>
             </div>
 
@@ -238,44 +237,44 @@
                 Monster Type
                 <div id="checkboxfieldsetEncounter">
                     <div id="monsterTypesEncounter">
+
                         <label for="aberationEncounter-type" class="checkbox">Aberation</label>
                         <input type="checkbox" name="Aberration" id="aberationEncounter-type" class="monTypeEncounter">
                         <label for="beastEncounter-type" class="checkbox">Beast</label>
                         <input type="checkbox" name="Beast" id="beastEncounter-type" class="monTypeEncounter">
-                        <label for="dragonEncounter-type" class="checkbox">Dragon</label>
-                        <input type="checkbox" name="Dragon" id="dragonEncounter-type" class="monTypeEncounter">
+                        <label for="constructEncounter-type" class="checkbox">Construct</label>
+                        <input type="checkbox" name="Construct" id="constructEncounter-type" class="monTypeEncounter">
 
                         <br/>
-
+                        <label for="dragonEncounter-type" class="checkbox">Dragon</label>
+                        <input type="checkbox" name="Dragon" id="dragonEncounter-type" class="monTypeEncounter">
                         <label for="elementalEncounter-type" class="checkbox">Elemental</label>
                         <input type="checkbox" name="Elemental" id="elementalEncounter-type" class="monTypeEncounter">
                         <label for="feyEncounter-type" class="checkbox">Fey</label>
                         <input type="checkbox" name="Fey" id="feyEncounter-type" class="monTypeEncounter">
+
+                        <br/>
                         <label for="fiendEncounter-type" class="checkbox">Fiend</label>
                         <input type="checkbox" name="Fiend" id="fiendEncounter-type" class="monTypeEncounter">
-
-                        <br/>
-
                         <label for="giantEncounter-type" class="checkbox">Giant</label>
                         <input type="checkbox" name="Giant" id="giantEncounter-type" class="monTypeEncounter">
-                        <label for="MonstrosityEncounter-type" class="checkbox">Monstrosity</label>
-                        <input type="checkbox" name="Monstrosity" id="MonstrosityEncounter-type" class="monTypeEncounter">
-                        <label for="npcEncounter-type" class="checkbox">NPC</label>
-                        <input type="checkbox" name="NPC" id="npcEncounter-type" class="monTypeEncounter">
+                        <label for="humanoidEncounter-type" class="checkbox">Humanoid</label>
+                        <input type="checkbox" name="Humanoid" id="humanoidEncounter-type" class="monTypeEncounter">
 
                         <br/>
-
+                        <label for="monstrosityEncounter-type" class="checkbox">Monstrosity</label>
+                        <input type="checkbox" name="Monstrosity" id="monstrosityEncounter-type" class="monTypeEncounter">
+                        <label for="npcEncounter-type" class="checkbox">NPC</label>
+                        <input type="checkbox" name="NPC" id="npcEncounter-type" class="monTypeEncounter">
                         <label for="oozeEncounter-type" class="checkbox">Ooze</label>
                         <input type="checkbox" name="Ooze" id="oozeEncounter-type" class="monTypeEncounter">
+
+                        <br/>
                         <label for="swarmEncounter-type" class="checkbox">Swarm</label>
                         <input type="checkbox" name="Swarm" id="swarmEncounter-type" class="monTypeEncounter">
                         <label for="undeadEncounter-type" class="checkbox">Undead</label>
                         <input type="checkbox" name="Undead" id="undeadEncounter-type" class="monTypeEncounter">
 
-                        <br/>
-
-                        <label for="humanoidEncounter-type" class="checkbox">Humanoid</label>
-                        <input type="checkbox" name="Humanoid" id="humanoidEncounter-type" class="monTypeEncounter">
 
                     </div>
                 </div>
