Monster list fixes

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -170,6 +170,8 @@
                         <input type="checkbox" name="Ooze" id="ooze-type" class="monTypeSearch">
 
                         <br/>
+                        <label for="plant-type" class="checkbox">Plant</label>
+                        <input type="checkbox" name="Plant" id="plant-type" class="monTypeSearch">
                         <label for="swarm-type" class="checkbox">Swarm</label>
                         <input type="checkbox" name="Swarm" id="swarm-type" class="monTypeSearch">
                         <label for="undead-type" class="checkbox">Undead</label>
@@ -270,6 +272,8 @@
                         <input type="checkbox" name="Ooze" id="oozeEncounter-type" class="monTypeEncounter">
 
                         <br/>
+                        <label for="plantEncounter-type" class="checkbox">Plant</label>
+                        <input type="checkbox" name="Plant" id="plantEncounter-type" class="monTypeEncounter">
                         <label for="swarmEncounter-type" class="checkbox">Swarm</label>
                         <input type="checkbox" name="Swarm" id="swarmEncounter-type" class="monTypeEncounter">
                         <label for="undeadEncounter-type" class="checkbox">Undead</label>
